change in the background of notes

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     </div>
 
   </div>
+<div id="testea">
 
-  <div id="notations">
+    <div id="notations">
     <p>
       Gosto de arte &#127912<br> 
       Gosto de código &#128187<br> 
@@ -74,6 +75,9 @@
       E gosto principalmente de você.
     </p>
   </div>
+
+</div>
+
 
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
